style: 한 줄에 점을 하나만 찍는다